--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
-<%= link_to image_tag("plusone.png", alt: "Rails"), 'http://plusoneberlin.com/' %>
+<%= link_to image_tag("plusone.png", :size => "64x64", alt: "Rails"), 'http://plusoneberlin.com/' %>
 
